--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,11 @@
 title: Danny's home
 email: danny6543211@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  My blog.
+  It is my personal blog, I will write some coding thoughts and maybe diary on it.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://danny6543211.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+# twitter_username: jekyllrb
+github_username:  danny6543211
 
 # Build settings
 theme: minima
